增加获取用户详情的接口
